fix: add noopener to admin test links

--- a/admin/index.html
+++ b/admin/index.html
@@ -122,7 +122,7 @@
                     <h3>🔧 Outils de Test</h3>
                     <p>Accéder aux pages de diagnostic et test pour résoudre les problèmes</p>
                     <div class="test-links">
-                        <a href="test-auth.html" class="test-link" target="_blank">
+                        <a href="test-auth.html" class="test-link" target="_blank" rel="noopener">
                             <div class="test-icon">🔐</div>
                             <div class="test-info">
                                 <div class="test-title">Test Authentification</div>
@@ -130,7 +130,7 @@
                             </div>
                         </a>
                         
-                        <a href="test-backend.html" class="test-link" target="_blank">
+                        <a href="test-backend.html" class="test-link" target="_blank" rel="noopener">
                             <div class="test-icon">🧪</div>
                             <div class="test-info">
                                 <div class="test-title">Test Backend OpenAI</div>
